--- a/style.css
+++ b/style.css
@@ -242,8 +242,8 @@ nav a:nth-child(5):hover ~ .animation {
 iframe {
   margin-left: 20px;
   border-radius: 20px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
 }
 
 /* Customs */
